# esplay

./: .gitignore  README.md  pyproject.toml
esplay/: __init__.py  cli.py  config.py  errors.py  state.py
esplay.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
esplay/datasets/: base.py  registry.py  users.py
esplay/datasets/data/: users.json
esplay/domain/: cluster_manager.py  credentials.py  data_seeder.py  index_provisioner.py  kibana_manager.py
esplay/platform/: base.py  factory.py  linux.py  macos.py  windows.py
esplay/runtime/: base.py  docker.py  factory.py
esplay/services/: setup_service.py  status_service.py  teardown_service.py
tests/: test_data_seeder.py  test_docker_runtime.py  test_integration.py  test_platform.py  test_setup_service.py  test_teardown_service.py
